# zero-to-hero

./: .gitignore  README.md
calculator_api_server/: README.md  main.py  pyproject.toml  schemas.py
calculator_api_server/app/: main.py
new_todo_list_server/: README.md  pyproject.toml
new_todo_list_server/app/: main.py  service.py
new_todo_list_server/app/todos/: router.py  schemas.py  service.py
new_todo_list_server/database/: engine.py  models.py
programming_basic/: README.md  main.py
todo_list_basic/: README.md  crud.py  main.py  model.py
todo_list_file_io/: .gitignore  README.md  crud.py  file_io.py  main.py  model.py
todo_list_server/requests/: main.py
todo_list_server/todo_list_server/: crud.py  main.py  models.py  schemas.py
todo_list_server/with_orm/: crud.py  database.py  main.py  models.py  schemas.py
todo_list_server/without_orm/: crud.py  database.py  main.py  schemas.py  sql_app.db
todo_list_with_db/: .gitignore  README.md  crud.py  database.py  main.py  model.py
web_server_basic/: README.md  manage.py
web_server_basic/web_server_basic/: asgi.py  settings.py  urls.py  wsgi.py
