[tool.poetry]
name = "app"
version = "0.1.0"
description = "todo list web application server"
authors = ["Eunbi Kang <jenabill@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
databases = {extras = ["sqlite"], version = "^0.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
